--- a/src/Blog/NewsBundle/Resources/views/Index/contact.html.twig
+++ b/src/Blog/NewsBundle/Resources/views/Index/contact.html.twig
@@ -3,7 +3,10 @@
 {% block body %}
     <h1>Contact us:</h1>
 
-    <form method="post">
-        {{ form(form) }}
-    </form>
+    <div class="contact_form">
+        <form method="post">
+            {{ form(form) }}
+        </form>
+    </div>
+
 {% endblock %}
