some tests, in working

--- a/src/Blog/NewsBundle/Resources/views/Index/advertForm.html.twig
+++ b/src/Blog/NewsBundle/Resources/views/Index/advertForm.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Add new advertisement</h1>
 
-    <form method="post">
+    <form method="post" action="{{ path('createAdvertisement') }}">
         {{ form(form) }}
     </form>
 {% endblock %}
