--- a/src/Blog/NewsBundle/Resources/views/Index/index.html.twig
+++ b/src/Blog/NewsBundle/Resources/views/Index/index.html.twig
@@ -1,10 +1,11 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
+
     Hello {{ name }}
-    <br />
+
     {% for category in categories %}
-        {{ category.name }}
-        <br />
+        <p>{{ category }}</p>
     {% endfor %}
+
 {% endblock %}
