using mail service

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,6 +17,7 @@
                     <li><a href="{{ path('home') }}">Home</a></li>
                     <li><a href="{{ path('contact') }}">Contact form</a></li>
                     <li><a href="{{ path('advert_form') }}">Advertisement form</a></li>
+                    <li><a href="{{ path('service') }}">Services</a></li>
                 </ul>
             </div>
         {% endblock %}
