--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -18,6 +18,7 @@
                     <li><a href="{{ path('contact') }}">Contact form</a></li>
                     <li><a href="{{ path('advert_form') }}">Advertisement form</a></li>
                     <li><a href="{{ path('service') }}">Services</a></li>
+                    <li><a href="{{ path('all_comments') }}">Comments</a></li>
                 </ul>
             </div>
         {% endblock %}
