add categoryRepository service

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,6 +19,7 @@
                     <li><a href="{{ path('advert_form') }}">Advertisement form</a></li>
                     <li><a href="{{ path('service') }}">Services</a></li>
                     <li><a href="{{ path('all_comments') }}">Comments</a></li>
+                    <li><a href="{{ path('categories') }}">Categories</a></li>
                 </ul>
             </div>
         {% endblock %}
