--- a/src/Blog/NewsBundle/Resources/views/TestServices/comment.html.twig
+++ b/src/Blog/NewsBundle/Resources/views/TestServices/comment.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     {% for comment in comments %}
-        <p>{{ comment.comment_message }}</p>
+        <p>{{ comment.commentMessage }}</p>
     {% endfor %}
 
 {% endblock %}
