--- a/src/Blog/NewsBundle/Resources/views/TestServices/index.html.twig
+++ b/src/Blog/NewsBundle/Resources/views/TestServices/index.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    <p>Service index: {{ str }}</p>
-    <p>{{ str1 }}</p>
+    <p>Service index: {{ testString1 }}</p>
+    <p>{{ testString2 }}</p>
 {% endblock %}
