--- a/src/Blog/NewsBundle/Resources/views/TestServices/send.html.twig
+++ b/src/Blog/NewsBundle/Resources/views/TestServices/send.html.twig
@@ -1,5 +1,5 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    Send email to {{ message }}
+    Sent email to {{ message }}
 {% endblock %}
