add crud for advertisements(news)

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -16,7 +16,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="{{ path('home') }}">Home</a></li>
                     <li><a href="{{ path('contact') }}">Contact form</a></li>
-                    <li><a href="{{ path('advert_form') }}">Advertisement form</a></li>
+                    <li><a href="{{ path('adverts') }}">Advertisements</a></li>
                     <li><a href="{{ path('service') }}">Services</a></li>
                     <li><a href="{{ path('all_comments') }}">Comments</a></li>
                     <li><a href="{{ path('categories') }}">Categories</a></li>
