--- a/src/Blog/NewsBundle/Resources/public/css/style.css
+++ b/src/Blog/NewsBundle/Resources/public/css/style.css
@@ -12,3 +12,19 @@
 .contact_form textarea {
     float: right;
 }
+
+.new_footer {
+    height: 30px;
+}
+
+.new {
+    width: 70%; height: 100%; margin-left: 15%; margin-right: 15%; margin-top: 50px;
+}
+
+.date_created {
+    float: right;
+}
+
+.create_new {
+    width: 70%; height: 100%; margin-left: 15%; margin-right: 15%; margin-top: 50px;
+}
