test file uploading

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -20,6 +20,7 @@
                     <li><a href="{{ path('service') }}">Services</a></li>
                     <li><a href="{{ path('all_comments') }}">Comments</a></li>
                     <li><a href="{{ path('categories') }}">Categories</a></li>
+                    <li><a href="{{ path('file_upload') }}">File uploading test</a></li>
                 </ul>
             </div>
         {% endblock %}
